# libohos

./: CMakeLists.txt  README.md  ohos.c
include/: ohos.h
scripts/: build.sh
scripts/env/: arm64-v8a.sh  armeabi-v7a.sh  x86_64.sh
